crates/carta/tests/snapshots/golden_writer__org__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_quote
quoted

more lines here
#+end_quote
