crates/carta/tests/snapshots/golden_writer__org__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
see [cite:@knuth1984] for details
