crates/carta/tests/snapshots/golden_writer__org__common__code-block-id.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+name: snippet
#+begin_example
plain code
#+end_example
