crates/carta/tests/snapshots/golden_writer__org__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_example
indented code
second line
#+end_example
