crates/carta/tests/snapshots/golden_writer__org__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_src rust
let s = "hi";
x < y && y > z
#+end_src
