crates/carta/tests/snapshots/golden_writer__org__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_src python -n
print(1)
print(2)
#+end_src
