crates/carta/tests/snapshots/golden_writer__org__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_example
first line
second line
#+end_example
