crates/carta/tests/snapshots/golden_writer__org__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
- term: with colon :: definition
