crates/carta/tests/snapshots/golden_writer__org__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_note
be careful here
#+end_note
